--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Comment Form</title>
+		<link rel="stylesheet" href="css/style.css">
+		<!--link rel"stylesheet" href="./css/style.css">
+		<link rel"stylesheet" href="/css/style.css"> -->
 	</head>
 
 	<body>
+		<div class="container">
+			<textarea id="comment" placeholder="your comment here"></textarea>
+			<div class="btn">Submit</div>
+			<p><span id="label"></span> characters left</p>
+		</div>
+		<script src="js/main.js"></script>
 	</body>
 </html>
